# IpoF_vs

./: CMakeLists.txt  main.cpp  visualization.py
classes/: Atom.cpp  CMakeLists.txt  Cell.cpp  Constants.cpp  Coordinate.cpp  Crystal.cpp
classes/headers/: Atom.h  Cell.h  Constants.h  Coordinate.h  Crystal.h
